# tutorial-fast-api

./: README.md  pyproject.toml  val.sh
note/: 1-firststep.md  2-pathparameter.md  3-queryparameter.md  4-requestbody.md
src/1-2-3-code/: main.py
src/4-code/: main.py
